@@ -5,6 +5,7 @@ class Net::SSLeay::X509_STORE_CTX {
   
   use Net::SSLeay::Error;
   use Net::SSLeay::X509;
+  use Net::SSLeay::X509_STORE;
   
   # Class Methods
   native method get1_issuer : int ($issuer_ref : Net::SSLeay::X509, $ctx : Net::SSLeay::X509_STORE_CTX, $x : Net::SSLeay::X509);
@@ -17,6 +18,8 @@ class Net::SSLeay::X509_STORE_CTX {
   native method get_error_depth : int ();
   
   native method get_current_cert : Net::SSLeay::X509 ();
+  
+  native method Init : int ($trust_store : Net::SSLeay::X509_STORE, $target : Net::SSLeay::X509, $untrusted_array : Net::SSLeay::X509[]);
   
   native method DESTROY : void ();
   
